# modular

./: Makefile.am  autogen.sh  configure.ac
modular/: context.hpp  graph.hpp  library.hpp  loader.hpp  modular.hpp  module.hpp  package.hpp  processor.hpp  registry.hpp  scheduler.hpp  slot.hpp  string.hpp
modular/utils/: lib.hpp
modules/fifo/: fifo.cpp  fifo.hpp
modules/text/: text.cpp  text.hpp
modules/tick/: tick.cpp
modules/tickprint/: tickprint.cpp
src/: context.cpp  graph.cpp  loader.cpp  module.cpp  package.cpp
src/utils/: lib.cpp
tests/: test_exec1.cpp  test_ipc1.cpp  test_text1.cpp
